@@ -1401,6 +1401,10 @@ static void obit_reply(
           /* normal ack, mark job as exited */
 
           pjob->ji_qs.ji_substate = JOB_SUBSTATE_EXITED;
+          
+          /* Clear out destination so we know job is not on mom any more */
+          
+          pjob->ji_qs.ji_destin[0] = '\0';
 
           job_save(pjob,SAVEJOB_QUICK);
 
