@@ -3,6 +3,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
 2.4.0
   e - added -q to qalter to allow quicker response to modify requests
   f - added basic qhold support for job arrays
+  b - clear out ji_destin in obit_reply
 
 2.3.1
   b - fixed a bug where torque would fail to start if there was no LF in nodes file
